# nastool

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/api/v1/: downloader.py  search.py  subscribe.py
app/chain/: download.py  filter.py  transfer.py
app/core/: security.py
app/db/: __init__.py
app/db/models/: automation.py  downloader.py  history.py  sitestatistic.py  subscribe.py  system_setting.py
app/modules/automation/: manager.py
app/modules/brush/: manager.py
app/modules/checkin/: __init__.py
app/modules/indexer/: __init__.py
app/modules/mediaserver/: base.py
app/modules/notification/: __init__.py
app/modules/qbittorrent/: __init__.py
app/schemas/: __init__.py
app/site/: registry.py
app/site/spiders/: __init__.py  base.py  mteam.py
app/utils/: cookie.py  media_parser.py  url.py
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: __init__.py  log.py  main.py  scheduler.py
backend/app/chain/: search.py  subscribe.py
backend/app/core/: config.py  event.py
backend/app/helper/: cookiecloud.py  rss.py  transfer.py
backend/app/schemas/: __init__.py
backend/app/site/: detector.py  manager.py  registry.py
backend/tests/: test_brush_filter.py  test_mteam_enrich.py  test_mteam_parse.py  test_rss_feed.py
config/: sites.json
frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
(+44 files in other folders)
