[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nastool"
version = "1.0.0"
description = "NAS 媒体库自动化管理工具"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # 数据库
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",         # PostgreSQL 可选

    # 网络请求
    "httpx[http2]>=0.27.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "fake-useragent>=1.5.0",

    # HTML/XML 解析
    "lxml>=5.2.0",
    "beautifulsoup4>=4.12.0",
    "cssselect>=1.2.0",

    # 无头浏览器（CF 站点）
    "playwright>=1.44.0",

    # 任务调度
    "apscheduler>=3.10.0",

    # 数据验证
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Torrent 处理
    "bencode.py>=4.0.0",

    # 工具库
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "arrow>=1.3.0",
    "cn2an>=0.5.22",
    "pypinyin>=0.51.0",
    "PTN>=2.8.0",              # Torrent 文件名解析

    # 媒体元数据
    "tmdbv3api>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"
